--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Moto gymkhana</string>
 
     <string name="error">ERROR!!!</string>
+    <string name="stages">STAGES</string>
 </resources>
